--- a/app.json
+++ b/app.json
@@ -1,183 +1,212 @@
 [
-    {
-      "id": 1,
-      "name": "John Doe",
-      "email": "john.doe@example.com",
-      "address": "123 Main Street, Springfield, IL"
-    },
-    {
-      "id": 2,
-      "name": "Jane Smith",
-      "email": "jane.smith@example.com",
-      "address": "456 Elm Street, Austin, TX"
-    },
-    {
-      "id": 3,
-      "name": "Bob Johnson",
-      "email": "bob.johnson@example.com",
-      "address": "789 Oak Street, Seattle, WA"
-    },
-    {
-      "id": 4,
-      "name": "Alice Brown",
-      "email": "alice.brown@example.com",
-      "address": "321 Maple Avenue, Denver, CO"
-    },
-    {
-      "id": 5,
-      "name": "Charlie Davis",
-      "email": "charlie.davis@example.com",
-      "address": "654 Pine Lane, Miami, FL"
-    },
-    {
-      "id": 6,
-      "name": "Eve Wilson",
-      "email": "eve.wilson@example.com",
-      "address": "987 Cedar Road, Boston, MA"
-    },
-    {
-      "id": 7,
-      "name": "David Miller",
-      "email": "david.miller@example.com",
-      "address": "123 Birch Street, Chicago, IL"
-    },
-    {
-      "id": 8,
-      "name": "Sophia Garcia",
-      "email": "sophia.garcia@example.com",
-      "address": "456 Walnut Street, Phoenix, AZ"
-    },
-    {
-      "id": 9,
-      "name": "Liam Martinez",
-      "email": "liam.martinez@example.com",
-      "address": "789 Willow Street, Dallas, TX"
-    },
-    {
-      "id": 10,
-      "name": "Mia Rodriguez",
-      "email": "mia.rodriguez@example.com",
-      "address": "321 Chestnut Street, Atlanta, GA"
-    },
-    {
-      "id": 11,
-      "name": "Noah White",
-      "email": "noah.white@example.com",
-      "address": "654 Spruce Road, San Diego, CA"
-    },
-    {
-      "id": 12,
-      "name": "Ava Moore",
-      "email": "ava.moore@example.com",
-      "address": "987 Aspen Lane, New York, NY"
-    },
-    {
-      "id": 13,
-      "name": "Ethan Taylor",
-      "email": "ethan.taylor@example.com",
-      "address": "123 Cypress Street, Orlando, FL"
-    },
-    {
-      "id": 14,
-      "name": "Isabella Anderson",
-      "email": "isabella.anderson@example.com",
-      "address": "456 Fir Lane, Portland, OR"
-    },
-    {
-      "id": 15,
-      "name": "Logan Thomas",
-      "email": "logan.thomas@example.com",
-      "address": "789 Redwood Road, Charlotte, NC"
-    },
-    {
-      "id": 16,
-      "name": "Emily Jackson",
-      "email": "emily.jackson@example.com",
-      "address": "321 Mahogany Avenue, Las Vegas, NV"
-    },
-    {
-      "id": 17,
-      "name": "Lucas Lee",
-      "email": "lucas.lee@example.com",
-      "address": "654 Acacia Drive, Nashville, TN"
-    },
-    {
-      "id": 18,
-      "name": "Amelia Harris",
-      "email": "amelia.harris@example.com",
-      "address": "987 Teak Street, Sacramento, CA"
-    },
-    {
-      "id": 19,
-      "name": "Mason Clark",
-      "email": "mason.clark@example.com",
-      "address": "123 Palm Road, Minneapolis, MN"
-    },
-    {
-      "id": 20,
-      "name": "Harper Lewis",
-      "email": "harper.lewis@example.com",
-      "address": "456 Magnolia Street, Houston, TX"
-    },
-    {
-      "id": 21,
-      "name": "Oliver Walker",
-      "email": "oliver.walker@example.com",
-      "address": "789 Cypress Avenue, Detroit, MI"
-    },
-    {
-      "id": 22,
-      "name": "Sophia Hall",
-      "email": "sophia.hall@example.com",
-      "address": "321 Oak Lane, Columbus, OH"
-    },
-    {
-      "id": 23,
-      "name": "Elijah Young",
-      "email": "elijah.young@example.com",
-      "address": "654 Beech Road, Kansas City, MO"
-    },
-    {
-      "id": 24,
-      "name": "Charlotte Allen",
-      "email": "charlotte.allen@example.com",
-      "address": "987 Cherry Avenue, Indianapolis, IN"
-    },
-    {
-      "id": 25,
-      "name": "James King",
-      "email": "james.king@example.com",
-      "address": "123 Dogwood Drive, Memphis, TN"
-    },
-    {
-      "id": 26,
-      "name": "Avery Wright",
-      "email": "avery.wright@example.com",
-      "address": "456 Sequoia Street, Salt Lake City, UT"
-    },
-    {
-      "id": 27,
-      "name": "Jack Lopez",
-      "email": "jack.lopez@example.com",
-      "address": "789 Linden Avenue, Omaha, NE"
-    },
-    {
-      "id": 28,
-      "name": "Lily Scott",
-      "email": "lily.scott@example.com",
-      "address": "321 Aspen Road, Miami, FL"
-    },
-    {
-      "id": 29,
-      "name": "Henry Green",
-      "email": "henry.green@example.com",
-      "address": "654 Maple Lane, New Orleans, LA"
-    },
-    {
-      "id": 30,
-      "name": "Ella Adams",
-      "email": "ella.adams@example.com",
-      "address": "987 Juniper Street, Pittsburgh, PA"
-    }
-  ]
-  
+  {
+    "id": 1,
+    "name": "John Doe",
+    "email": "john.doe@example.com",
+    "address": "123 Main Street, Springfield, IL",
+    "image": "https://www.w3schools.com/w3images/avatar2.png"
+  },
+  {
+    "id": 2,
+    "name": "Jane Smith",
+    "email": "jane.smith@example.com",
+    "address": "456 Elm Street, Austin, TX",
+    "image": "https://www.w3schools.com/w3images/avatar3.png"
+  },
+  {
+    "id": 3,
+    "name": "Bob Johnson",
+    "email": "bob.johnson@example.com",
+    "address": "789 Oak Street, Seattle, WA",
+    "image": "https://www.w3schools.com/w3images/avatar4.png"
+  },
+  {
+    "id": 4,
+    "name": "Alice Brown",
+    "email": "alice.brown@example.com",
+    "address": "321 Maple Avenue, Denver, CO",
+    "image": "https://www.w3schools.com/w3images/avatar5.png"
+  },
+  {
+    "id": 5,
+    "name": "Charlie Davis",
+    "email": "charlie.davis@example.com",
+    "address": "654 Pine Lane, Miami, FL",
+    "image": "https://www.w3schools.com/w3images/avatar1.png"
+  },
+  {
+    "id": 6,
+    "name": "Eve Wilson",
+    "email": "eve.wilson@example.com",
+    "address": "987 Cedar Road, Boston, MA",
+    "image": "https://www.w3schools.com/w3images/avatar2.png"
+  },
+  {
+    "id": 7,
+    "name": "David Miller",
+    "email": "david.miller@example.com",
+    "address": "123 Birch Street, Chicago, IL",
+    "image": "https://www.w3schools.com/w3images/avatar3.png"
+  },
+  {
+    "id": 8,
+    "name": "Sophia Garcia",
+    "email": "sophia.garcia@example.com",
+    "address": "456 Walnut Street, Phoenix, AZ",
+    "image": "https://www.w3schools.com/w3images/avatar4.png"
+  },
+  {
+    "id": 9,
+    "name": "Liam Martinez",
+    "email": "liam.martinez@example.com",
+    "address": "789 Willow Street, Dallas, TX",
+    "image": "https://www.w3schools.com/w3images/avatar5.png"
+  },
+  {
+    "id": 10,
+    "name": "Mia Rodriguez",
+    "email": "mia.rodriguez@example.com",
+    "address": "321 Chestnut Street, Atlanta, GA",
+    "image": "https://www.w3schools.com/w3images/avatar1.png"
+  },
+  {
+    "id": 11,
+    "name": "Noah White",
+    "email": "noah.white@example.com",
+    "address": "654 Spruce Road, San Diego, CA",
+    "image": "https://www.w3schools.com/w3images/avatar2.png"
+  },
+  {
+    "id": 12,
+    "name": "Ava Moore",
+    "email": "ava.moore@example.com",
+    "address": "987 Aspen Lane, New York, NY",
+    "image": "https://www.w3schools.com/w3images/avatar3.png"
+  },
+  {
+    "id": 13,
+    "name": "Ethan Taylor",
+    "email": "ethan.taylor@example.com",
+    "address": "123 Cypress Street, Orlando, FL",
+    "image": "https://www.w3schools.com/w3images/avatar4.png"
+  },
+  {
+    "id": 14,
+    "name": "Isabella Anderson",
+    "email": "isabella.anderson@example.com",
+    "address": "456 Fir Lane, Portland, OR",
+    "image": "https://www.w3schools.com/w3images/avatar5.png"
+  },
+  {
+    "id": 15,
+    "name": "Logan Thomas",
+    "email": "logan.thomas@example.com",
+    "address": "789 Redwood Road, Charlotte, NC",
+    "image": "https://www.w3schools.com/w3images/avatar1.png"
+  },
+  {
+    "id": 16,
+    "name": "Emily Jackson",
+    "email": "emily.jackson@example.com",
+    "address": "321 Mahogany Avenue, Las Vegas, NV",
+    "image": "https://www.w3schools.com/w3images/avatar2.png"
+  },
+  {
+    "id": 17,
+    "name": "Lucas Lee",
+    "email": "lucas.lee@example.com",
+    "address": "654 Acacia Drive, Nashville, TN",
+    "image": "https://www.w3schools.com/w3images/avatar3.png"
+  },
+  {
+    "id": 18,
+    "name": "Amelia Harris",
+    "email": "amelia.harris@example.com",
+    "address": "987 Teak Street, Sacramento, CA",
+    "image": "https://www.w3schools.com/w3images/avatar4.png"
+  },
+  {
+    "id": 19,
+    "name": "Mason Clark",
+    "email": "mason.clark@example.com",
+    "address": "123 Palm Road, Minneapolis, MN",
+    "image": "https://www.w3schools.com/w3images/avatar5.png"
+  },
+  {
+    "id": 20,
+    "name": "Harper Lewis",
+    "email": "harper.lewis@example.com",
+    "address": "456 Magnolia Street, Houston, TX",
+    "image": "https://www.w3schools.com/w3images/avatar1.png"
+  },
+  {
+    "id": 21,
+    "name": "Oliver Walker",
+    "email": "oliver.walker@example.com",
+    "address": "789 Cypress Avenue, Detroit, MI",
+    "image": "https://www.w3schools.com/w3images/avatar2.png"
+  },
+  {
+    "id": 22,
+    "name": "Sophia Hall",
+    "email": "sophia.hall@example.com",
+    "address": "321 Oak Lane, Columbus, OH",
+    "image": "https://www.w3schools.com/w3images/avatar3.png"
+  },
+  {
+    "id": 23,
+    "name": "Elijah Young",
+    "email": "elijah.young@example.com",
+    "address": "654 Beech Road, Kansas City, MO",
+    "image": "https://www.w3schools.com/w3images/avatar4.png"
+  },
+  {
+    "id": 24,
+    "name": "Charlotte Allen",
+    "email": "charlotte.allen@example.com",
+    "address": "987 Cherry Avenue, Indianapolis, IN",
+    "image": "https://www.w3schools.com/w3images/avatar5.png"
+  },
+  {
+    "id": 25,
+    "name": "James King",
+    "email": "james.king@example.com",
+    "address": "123 Dogwood Drive, Memphis, TN",
+    "image": "https://www.w3schools.com/w3images/avatar1.png"
+  },
+  {
+    "id": 26,
+    "name": "Avery Wright",
+    "email": "avery.wright@example.com",
+    "address": "456 Sequoia Street, Salt Lake City, UT",
+    "image": "https://www.w3schools.com/w3images/avatar2.png"
+  },
+  {
+    "id": 27,
+    "name": "Jack Lopez",
+    "email": "jack.lopez@example.com",
+    "address": "789 Linden Avenue, Omaha, NE",
+    "image": "https://www.w3schools.com/w3images/avatar3.png"
+  },
+  {
+    "id": 28,
+    "name": "Lily Scott",
+    "email": "lily.scott@example.com",
+    "address": "321 Aspen Road, Miami, FL",
+    "image": "https://www.w3schools.com/w3images/avatar4.png"
+  },
+  {
+    "id": 29,
+    "name": "Henry Green",
+    "email": "henry.green@example.com",
+    "address": "654 Maple Lane, New Orleans, LA",
+    "image": "https://www.w3schools.com/w3images/avatar5.png"
+  },
+  {
+    "id": 30,
+    "name": "Ella Adams",
+    "email": "ella.adams@example.com",
+    "address": "987 Juniper Street, Pittsburgh, PA",
+    "image": "https://www.w3schools.com/w3images/avatar1.png"
+  }
+]
